# clip_classifier

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/classifier/: models.py
backend/classifier/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json
frontend/src/components/: Description.js  Hero.js  TextArea.js
frontend/src/layout/: Footer.js
frontend/src/pages/: _document.js  classifier.js
frontend/src/theme/: theme.js
