[tool.poetry]
name = "clip-classifier"
version = "0.1.0"
description = ""
authors = ["Miguel Valente <miguelvalente@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
absl-py= "1.0.0"
asgiref="3.5.0"
astunparse="1.6.3"
cached-property="1.5.2"
cachetools="5.0.0"
certifi="2021.10.8"
charset-normalizer="2.0.11"
Django="3.2.12"
django-cors-headers="3.11.0"
djangorestframework="3.13.1"
flatbuffers="2.0"
gast="0.5.3"
google-auth="2.6.0"
google-auth-oauthlib="0.4.6"
google-pasta="0.2.0"
grpcio="1.43.0"
h5py="3.6.0"
idna="3.3"
importlib-metadata="4.10.1"
keras="2.8.0"
Keras-Preprocessing="1.1.2"
libclang="13.0.0"
Markdown="3.3.6"
numpy="1.21.5"
oauthlib="3.2.0"
opencv-python="4.5.5.62"
opt-einsum="3.3.0"
Pillow="9.0.1"
protobuf="3.19.4"
pyasn1="0.4.8"
pyasn1-modules="0.2.8"
pytz="2021.3"
requests="2.27.1"
requests-oauthlib="1.3.1"
rsa="4.8"
six="1.16.0"
sqlparse="0.4.2"
termcolor="1.1.0"
typing_extensions="4.0.1"
urllib3="1.26.8"
Werkzeug="2.0.3"
wrapt="1.13.3"
zipp="3.7.0"
clip = {git = "https://github.com/openai/CLIP.git"}
torch = "^1.13.1"
torchvision = "^0.14.1"
tqdm = "^4.64.1"
ftfy = "^6.1.1"
regex = "^2022.10.31"
drf-yasg = "^1.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
